--- a/setup.yml
+++ b/setup.yml
@@ -46,5 +46,5 @@
     service:
       name: bind9
       state: restarted
-  - name: DNS check srv1.home.local 
-    debug: msg="{{ lookup('dig', 'srv1.home.local.')}}"
+  - name: DNS check ns1.home.local 
+    debug: msg="{{ lookup('dig', 'ns1.home.local.')}}"
